src/css/main.css
#main {
  position: absolute;
  background-color: white;
  width: 100%;
  top: 0px;
  bottom: 0px;
  right: 0px;
  left: 0px;
  z-index: 0;
}

#app {
  position: absolute;
  top: 0px;
  right: 0px;
  left: 0px;
  bottom: 0px;
  margin: auto;
  width: 100vw;
  height: calc(9/16 * 100vw);
  max-height: 100vh;
  max-width: calc(16/9 * 100vh);
  pointer-events: none;
}

.garden {
  position: absolute;
  box-sizing: border-box;
  background-image: url(../graphics/garden-90.png);
  background-size: cover;
  color: black;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  margin: auto;
  width: 56%;
  pointer-events: all;
}

.underground {
  position: absolute;
  background-color: white;
  box-sizing: border-box;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  margin: auto;
  width: 56%;
  z-index: -1000;
}

.flower {
  position: absolute;
  border-radius: 50%;
}

.connection {
  background-position: center left;
  background-size: auto 100%;
  border-radius: 1em / 50%;
  pointer-events: none;
}

.connection.purple {
  background-image: url(../graphics/player-purple.png);
}

.connection.red {
  background-image: url(../graphics/player-red.png);
}

.connection.yellow {
  background-image: url(../graphics/player-red.png);
}

.score {
}
.score.purple::after {
  background-color: purple;
}
.score.red::after {
  background-color: red;
}
.score.yellow::after {
  background-color: yellow;
}

.score::after{
  content: '';
  display: inline-block;
  width: 2em;
  height: 2em;
  margin-left: 2em;
  border-radius: 50%;
  position: absolute;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
}

.highlight {
  position: absolute;
  border-radius: 50%;
  opacity: 0.4;
}

.highlight.purple {
  background-color: purple;
}

.highlight.red {
  background-color: red;
}

.tool-box {
  width: 20%;
  position: absolute;
  z-index: -1001;
}
.tool-box--menu {
  top: 1%;
  left: 3%;
}
.tool-box--score {
  bottom: 1%;
  left: 3%;
}

.tool-card {
  position: relative;
  width: 100%;
  padding: 0px;
  height: calc((9/16 * 100vw) / 9);
  max-height: calc(100vh / 9);
  pointer-events: none;
  margin-top: 1%;
  margin-bottom: 1%;
}

.tool-card-left {
  margin-left: auto;
  text-align: left;
}

.tool-card--logo {
  width: 90%;
}

.tool-card--button {
  width: 90%;
}

.tool-card--score {
  width: 50%;
}

.card-w1 {
  width: 30%;
}

.card-w2 {
  width: 60%;
}

.card-w3 {
  width: 90%;
}

.logo {
}



.card-wrapper--outer {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  margin: auto;
}

.card-wrapper--inner {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
}

.card {
  font-size: 3vmin;
  box-sizing: border-box;
  border: solid green 1px;
  border-radius: 1vw;
  background: url(../graphics/card-background.png);
  pointer-events: all;
}

.card--addon {
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  right: 50%;
  width: 40%;
  height: 100%;
  box-shadow: 2px 2px 5px 4px rgba(138,138,138,1);
}

.card--content {
  position: relative;
  margin-left: auto;
  height: 100%;
  box-shadow: 5px 5px 10px 5px rgba(138,138,138,1);
}

.card-score {
}

.addon-remove {
}

.card--centered {
  margin-left: 1em;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

/**
 * Animations
 */

 /** Wide card on the left. */
.card-left-w3-enter {
  right: -90%;
  max-height: 0;
}
.card-left-w3-enter.card-left-w3-enter-active {
  right: 0%;
  max-height: calc(100vh / 9);
  transition:
    max-height 500ms 0ms ease-in-out,
    right 500ms 500ms ease-in-out;
}
.card-left-w3-leave {
  right: 0%;
  max-height: calc(100vh / 9);
}
.card-left-w3-leave.card-left-w3-leave-active {
  right: -90%;
  max-height: 0;
  transition:
    right 500ms 0ms ease-in-out,
    max-height 500ms 500ms ease-in-out;
}

/** Middle-sized card on the left. */
.card-left-w2-enter {
 right: -60%;
 max-height: 0;
}
.card-left-w2-enter.card-left-w2-enter-active {
 right: 0%;
 max-height: calc(100vh / 9);
 transition:
    max-height 500ms 0ms ease-in-out,
    right 500ms 500ms ease-in-out;
}
.card-left-w2-leave {
 right: 0%;
 max-height: calc(100vh / 9);
}
.card-left-w2-leave.card-left-w2-leave-active {
 right: -60%;
 max-height: 0;
 transition:
   right 500ms 0ms ease-in-out,
   max-height 500ms 500ms ease-in-out;
}

 /** Small card on the left. */
.card-left-w1-enter {
  right: -30%;
}
.card-left-w1-enter.card-left-w1-enter-active {
  right: 0%;
  transition: margin-right 500ms ease-in-out;
}
.card-left-w1-leave {
  right: 0%;
}
.card-left-w1-leave.card-left-w1-leave-active {
  right: -30%;
  max-height: 0;
  transition:
    right 500ms 0ms ease-in-out,
    max-height 500ms 500ms ease-in-out;
}

/** Addon on the left. */
.addon-left-w2-enter {
  right: 18%;
  max-height: 0;
}
.addon-left-w2-enter.addon-left-w2-enter-active {
  right: 50%;
  max-height: calc(100vh / 9);
  transition:
    max-height 500ms 0ms ease-in-out,
    right 500ms 500ms ease-in-out;
}
.addon-left-w2-leave {
  right: 50%;
  max-height: calc(100vh / 9);
}
.addon-left-w2-leave.addon-left-w2-leave-active {
  right: 18%;
  max-height: 0;
  transition:
    right 500ms 0ms ease-in-out,
    max-height 500ms 500ms ease-in-out;
}

